Fixed aspect-ratio of img in slider on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -1006,19 +1006,22 @@ cite .photo img {
 .slide {
   position: absolute;
   max-width: 50%;
-  height: 100%;
+  height: auto;
+  max-height: 100%; 
   background: white;
   box-shadow: 0 10px 40px rgba(0,0,0,0.15);
   /*transition: all 333ms cubic-bezier(.04, .69, .31, .98);*/
   transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   overflow: hidden;
+  aspect-ratio: 1 / 2; 
 }
 
 .slide img {
   width: 100%;
   height: 100%;
-  xobject-fit: cover;
+  object-fit: contain;
+  display: block;
 }
 
 
